--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "format:check": "prettier --check .",
     "type-check": "tsc --noEmit",
     "dev:all": "concurrently \"npm run dev\" \"npm run socket:dev\"",
-    "socket:dev": "nodemon server/socket.js"
+    "socket:dev": "nodemon server/socket.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
